compiler-core/src/parse/snapshots/gleam_core__parse__tests__non_module_level_function_with_not_a_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  fn @() { 1 }  // wrong token and not a name\n}\n"
---
----- SOURCE CODE

pub fn main() {
  fn @() { 1 }  // wrong token and not a name
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:6
  │
3 │   fn @() { 1 }  // wrong token and not a name
  │      ^ I was not expecting this

Found `@`, expected one of: 
- `(`
